added link to files page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,8 @@ body {
   font-family: "Ubuntu", sans-serif;
 }
 
-.blogs-list-container {
+.blogs-list-container, 
+.files-list-container {
   overflow: auto !important;
 }
 
